--- a/app/globals.css
+++ b/app/globals.css
@@ -148,11 +148,43 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE dan Edge */
   }
-  
+
+  ::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Edge berbasis Chromium */
+  }
+
+  :root {
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
+
+  .dark {
+    --sidebar-background: 240 5.9% 10%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
+  }
+
   body {
     @apply bg-background text-foreground;
     font-family: var(--font-primary), sans-serif !important;
+  }
+
+  .color-dark {
+    background-color: oklch(0.145 0 0);
   }
 
   .scroll .line {
@@ -162,8 +194,7 @@
     background-color: oklch(0.551 0.027 264.364);
     overflow: hidden;
   }
-  
-  
+
 .scroll .line::before {
     position: absolute;
     left: 0;
