--- a/app/globals.css
+++ b/app/globals.css
@@ -1,36 +1,35 @@
-
 @import "tailwindcss";
 @plugin "tailwindcss-animate";
 @custom-variant dark (&:is(.dark *));
 
-@font-face{
-  font-family:'Blorado';
-  src:url("/fonts/NeurialGrotesk-Extrabold.otf");
-  font-weight:bold;
-  font-display:swap;
-  font-style:normal
+@font-face {
+  font-family: "Blorado";
+  src: url("/fonts/NeurialGrotesk-Extrabold.otf");
+  font-weight: bold;
+  font-display: swap;
+  font-style: normal;
 }
 
-@font-face{
-  font-family:'Blorado';
-  src:url("/fonts/NeurialGrotesk-Regular.otf");
-  font-weight:normal;
-  font-display:swap;
-  font-style:normal
+@font-face {
+  font-family: "Blorado";
+  src: url("/fonts/NeurialGrotesk-Regular.otf");
+  font-weight: normal;
+  font-display: swap;
+  font-style: normal;
 }
-@font-face{
-  font-family:'Blorado';
-  src:url("/fonts/NeurialGrotesk-Medium.otf");
-  font-weight:500;
-  font-display:swap;
-  font-style:normal
+@font-face {
+  font-family: "Blorado";
+  src: url("/fonts/NeurialGrotesk-Medium.otf");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
 }
-@font-face{
-  font-family:'Blorado';
-  src:url("/fonts/NeurialGrotesk-Bold.otf");
-  font-weight:600;
-  font-display:swap;
-  font-style:normal
+@font-face {
+  font-family: "Blorado";
+  src: url("/fonts/NeurialGrotesk-Bold.otf");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
 }
 
 @theme inline {
@@ -153,7 +152,7 @@
   }
 
   ::-webkit-scrollbar {
-      display: none; /* Chrome, Safari, Edge berbasis Chromium */
+    display: none; /* Chrome, Safari, Edge berbasis Chromium */
   }
 
   :root {
@@ -195,7 +194,7 @@
     overflow: hidden;
   }
 
-.scroll .line::before {
+  .scroll .line::before {
     position: absolute;
     left: 0;
     content: "";
@@ -222,5 +221,4 @@
       transform: translateX(100%);
     }
   }
-
 }
